objects/CMPL123__RDC_Cache__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Cache_Data__c</fullName>
        <label>Cache Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Cache_Key__c</fullName>
        <label>Cache Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Cache_Type__c</fullName>
        <label>Cache Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDC Cache</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>RDC Cache Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDC_Caches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>